refactor monthed delete and return